_infrastructure/kuma/kuma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma
  namespace: kuma
  labels:
    app: kuma
spec:
  selector:
    app: kuma
  ports:
    - port: 80
      name: web
      targetPort: web
