_infrastructure/kuma/kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma
  namespace: kuma
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  rules:
    - host: status.jemand771.net
      http:
        paths:
          - backend:
              service:
                name: kuma
                port:
                  name: web
            pathType: Prefix
            path: /
